# laundry-chute

./: .gitignore  README.md  pyproject.toml
.config/: key-example.json  settings-example.toml
src/laundry_chute/: __init__.py  bridge.py  downloader.py  fetcher.py
src/laundry_chute/bridge/: __init__.py  adb.py  base.py  ios.py
tests/: test_downloader.py  test_fetcher.py
