[project]
name = "laundry-chute"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tu Thanh", email = "tuthanh10825@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "gspread>=6.2.1",
    "pytest>=9.0.2",
    "tqdm>=4.67.3",
]

[project.scripts]
laundry-chute = "laundry_chute:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
